--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <a href="" class="logo" style="border-bottom-right-radius: 20px;">About</a>
 </div>
 
+<div style="border: 1px solid gray; width: 120px; height: 600px; position:absolute; top:0px;">Advertisement</div>
+
 <div style="width: 800px; height: 800px; margin-left:auto; margin-right:auto; margin-top: 40px;">
 
  <div style="width: 20%; height: 8%; float:left; box-shadow: inset -1px -1px 0px 0px #b5c6d0; display: table;">
@@ -32,6 +34,7 @@
  <div style="width: 80%; height: 92%; float:right;">
   <p class="headertext">Big things are coming soon</p>
  </div>
+
 
 </div>
 
