--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   <a href="" class="logo" style="border-bottom-right-radius: 20px;">About</a>
 </div>
 
+<div style="border: 1px solid gray; width: 728px; height: 90px; margin-left: auto; margin-right: auto; margin-top:20px;">Advertisement</div>
 <div style="border: 1px solid gray; width: 120px; height: 600px; position:absolute; top:0px;">Advertisement</div>
 
-<div style="width: 800px; height: 800px; margin-left:auto; margin-right:auto; margin-top: 40px;">
+<div style="width: 800px; height: 800px; margin-left:auto; margin-right:auto; margin-top: 20px;">
 
  <div style="width: 20%; height: 8%; float:left; box-shadow: inset -1px -1px 0px 0px #b5c6d0; display: table;">
   <p class="headertext" style="display: table-cell; vertical-align: middle;">Downloads Free</p>
@@ -32,7 +33,15 @@
   <a href="" class="dllist listBrother">NEW List item</a>
  </div>
  <div style="width: 80%; height: 92%; float:right;">
-  <p class="headertext">Big things are coming soon</p>
+  <p class="headertext">1,000's of Satisfied users:</p>
+  <div class="testimonial">
+    <p class="testimonialName">Testimonial</p>
+      <div class="testimonialRev">
+        <img class="testimonialRPic" src="https://dlldealer.cc/ia/testimonial_d.png"></img>
+        <div class="testimonialRTxt">"Really gets the job done!"</div>
+      </div>
+  </div>
+  
  </div>
 
 
