--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
   <a href="" class="logo" style="border-bottom-right-radius: 20px;">About</a>
 </div>
 
-<div style="border: 1px solid gray; width: 728px; height: 90px; margin-left: auto; margin-right: auto; margin-top:20px;">Advertisement</div>
-<div style="border: 1px solid gray; width: 120px; height: 600px; position:absolute; top:0px;">Advertisement</div>
+<div class="topAd">
+  <a href="" class="adLink"><p draggable="false" class="adTxt">AD</p></a>
+</div>
+<div class="skyscaperAd">
+  <a href="" class="adLink"><p draggable="false" class="adTxt">AD</p></a>
+</div>
 
 <div style="width: 800px; height: 800px; margin-left:auto; margin-right:auto; margin-top: 20px;">
 
@@ -30,15 +34,28 @@
 
  <div style="width: 20%; height: 92%; float:left; box-shadow: inset -1px 0px 0px 0px #b5c6d0;">
   <a href="" class="dllist listCracks">Cracks</a>
-  <a href="" class="dllist listBrother">NEW List item</a>
+  <a href="" class="dllist listGames">Free Games</a>
+  <a href="" class="dllist listBrother">Download</a>
+
+  <div class="squareAd">
+    <a href="" class="adLink"><p draggable="false" class="adTxt">AD</p></a>
+  </div>
+  
  </div>
  <div style="width: 80%; height: 92%; float:right;">
   <p class="headertext">1,000's of Satisfied users:</p>
   <div class="testimonial">
-    <p class="testimonialName">Testimonial</p>
+    <p class="testimonialName">Jonathan F.</p>
       <div class="testimonialRev">
         <img class="testimonialRPic" src="https://dlldealer.cc/ia/testimonial_d.png"></img>
         <div class="testimonialRTxt">"Really gets the job done!"</div>
+      </div>
+  </div>
+  <div class="testimonial">
+    <p class="testimonialName">Leon C.</p>
+      <div class="testimonialRev">
+        <img class="testimonialRPic" src="https://dlldealer.cc/ia/testimonial_d.png"></img>
+        <div class="testimonialRTxt">"DLLDealer had everything I needed... There will be more."</div>
       </div>
   </div>
   
@@ -46,6 +63,8 @@
 
 
 </div>
+
+<marquee scrollamount="12" class="bottomMarquee">JANUARY 2025 - WELCOME TO THE SITE LAUNCH 🎉</marquee>
 
 
 <script>
