--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <a href="" class="logo" style="border-bottom-right-radius: 20px;">About</a>
 </div>
 
-<div class="topAd">
-  <a href="" class="adLink"><p draggable="false" class="adTxt">AD</p></a>
+<div class="topPm">
+  <a href="" class="pmLink"><p draggable="false" class="pmTxt">Promo</p></a>
 </div>
-<div class="skyscaperAd">
-  <a href="" class="adLink"><p draggable="false" class="adTxt">AD</p></a>
+<div class="skyscaperPm">
+  <a href="" class="pmLink"><p draggable="false" class="pmTxt">Promo</p></a>
 </div>
 
 <div style="width: 800px; height: 800px; margin-left:auto; margin-right:auto; margin-top: 20px;">
@@ -37,8 +37,8 @@
   <a href="" class="dllist listGames">Free Games</a>
   <a href="" class="dllist listBrother">Download</a>
 
-  <div class="squareAd">
-    <a href="" class="adLink"><p draggable="false" class="adTxt">AD</p></a>
+  <div class="squarePm">
+    <a href="" class="pmLink"><p draggable="false" class="pmTxt">Promo</p></a>
   </div>
   
  </div>
@@ -64,7 +64,7 @@
 
 </div>
 
-<marquee scrollamount="12" class="bottomMarquee">JANUARY 2025 - WELCOME TO THE SITE LAUNCH 🎉</marquee>
+<marquee scrollamount="12" class="bottomMarquee">JANUARY 2025 - WELCOME TO THE SITE RELAUNCH 🎉</marquee>
 
 
 <script>
