--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
 <div class="topButtons">
   <a href="" class="logo" style="border-bottom-left-radius: 20px;">Home</a>
   <a href="" class="logo">Downloads</a>
-  <div class="logo container">
+  <div class="logo container" style="background: linear-gradient(to bottom, #f2f6f8 0%,#d8e1e7 50%,#b5c6d0 51%,#e0eff9 100%);">
     <img src="https://dlldealer.cc/ia/logo1.0.png" class="centeredImg" draggable="false"/>
   </div>
-  <a href="" class="logo">Contact</a>
+  <a href="contact.html" class="logo">Contact</a>
   <a href="" class="logo" style="border-bottom-right-radius: 20px;">About</a>
 </div>
 
 <div class="topPm">
-  <a href="" class="pmLink"><p draggable="false" class="pmTxt">Promo</p></a>
-</div>
-<div class="skyscaperPm">
-  <a href="" class="pmLink"><p draggable="false" class="pmTxt">Promo</p></a>
+  <a href="" class="pmLink"><p draggable="false" class="pmTxt">Leaf</p></a>
 </div>
 
+
 <div style="width: 800px; height: 800px; margin-left:auto; margin-right:auto; margin-top: 20px;">
+
+
+  <div class="skyscaperPm" style="margin-top: 70px; margin-left: -160px;">
+  <a href="" class="pmLink"><p draggable="false" class="pmTxt">Leaf</p></a>
+  </div>
+
+  <div class="skyscaperPm" style="margin-top: 70px; margin-left: 838px;">
+  <a href="" class="pmLink"><p draggable="false" class="pmTxt">Leaf</p></a>
+  </div>
+
 
  <div style="width: 20%; height: 8%; float:left; box-shadow: inset -1px -1px 0px 0px #b5c6d0; display: table;">
   <p class="headertext" style="display: table-cell; vertical-align: middle;">Downloads Free</p>
@@ -33,38 +41,76 @@
  </div>
 
  <div style="width: 20%; height: 92%; float:left; box-shadow: inset -1px 0px 0px 0px #b5c6d0;">
-  <a href="" class="dllist listCracks">Cracks</a>
-  <a href="" class="dllist listGames">Free Games</a>
-  <a href="" class="dllist listBrother">Download</a>
+  <a href="/inquisitor.html?link=687474-70733A-2F2F77-77772E-796F75-747562-652E63-6F6D2F-776174-63683F-763D4D-596E65-6E5568-443851-67" class="dllist listRed">Cracks</a>
+  <a href="" class="dllist listOrange">Film</a>
+  <a href="" class="dllist listYellow">Coupons</a>
+  <a href="" class="dllist listGreen">Free Games</a>
+  <a href="" class="dllist listBlue">Download</a>
+  <a href="" class="dllist listNull">???</a>
 
   <div class="squarePm">
-    <a href="" class="pmLink"><p draggable="false" class="pmTxt">Promo</p></a>
+    <a href="" class="pmLink"><p draggable="false" class="pmTxt">Leaf</p></a>
   </div>
   
  </div>
  <div style="width: 80%; height: 92%; float:right;">
-  <p class="headertext">1,000's of Satisfied users:</p>
-  <div class="testimonial">
-    <p class="testimonialName">Jonathan F.</p>
-      <div class="testimonialRev">
-        <img class="testimonialRPic" src="https://dlldealer.cc/ia/testimonial_d.png"></img>
-        <div class="testimonialRTxt">"Really gets the job done!"</div>
-      </div>
-  </div>
+  <p class="headertext testimonialHeader">Many satisfaction customers ...</p>
   <div class="testimonial">
     <p class="testimonialName">Leon C.</p>
       <div class="testimonialRev">
-        <img class="testimonialRPic" src="https://dlldealer.cc/ia/testimonial_d.png"></img>
-        <div class="testimonialRTxt">"DLLDealer had everything I needed... There will be more."</div>
+        <img class="testimonialRPic" src="/ia/testimonial_c.png"></img>
+        <div class="testimonialRTxt">"There really is a job! I love my software, download it quickly."</div>
+        <!-- Really gets the job done! I love my software and the downloads are quick. -->
       </div>
   </div>
+  <div class="testimonial">
+    <p class="testimonialName">Bart Floomy</p>
+      <div class="testimonialRev">
+        <img class="testimonialRPic" src="/ia/testimonial_c.png"></img>
+        <div class="testimonialRTxt">"Dlldealer had everything you need ... and maybe everything I would need."</div>
+        <!-- DLLDealer had everything I needed... and probably everything I will ever need. -->
+        <!-- Duldder I need ... and maybe I want. -->
+      </div>
+  </div>
+
+  <div class="testimonial">
+    <p class="testimonialName">Martin</p>
+      <div class="testimonialRev">
+        <img class="testimonialRPic" src="/ia/testimonial_c.png"></img>
+        <div class="testimonialRTxt">"You can make a lot of money so you are the best and self -sacrifice to give all free downloads."</div>
+      </div>
+  </div>
+
+  <div class="testimonial">
+    <p class="testimonialName">John F.</p>
+      <div class="testimonialRev">
+        <img class="testimonialRPic" src="/ia/testimonial_c.png"></img>
+        <div class="testimonialRTxt">"Did you forget something?"</div>
+        <!-- Aren't you forgetting someting? -->
+      </div>
+  </div>
+
+  <div class="testimonial">
+    <p class="testimonialName">Miguel D.</p>
+      <div class="testimonialRev">
+        <img class="testimonialRPic" src="/ia/testimonial_c.png"></img>
+        <div class="testimonialRTxt">"<span><img draggable="false" src="ia/nuggetsShop.png" style="user-select: none;"></span>"</div>
+        <!-- Aren't you forgetting someting? -->
+      </div>
+  </div>
+
+
   
  </div>
 
 
 </div>
 
-<marquee scrollamount="12" class="bottomMarquee">JANUARY 2025 - WELCOME TO THE SITE RELAUNCH 🎉</marquee>
+
+<p class="headertext" style="margin-bottom:px; color:gray"><span><img draggable="false" src="ia/dllx12.png" style="user-select: none;"></span> DLLDealer.CC</p>
+<p>burger</p>
+
+<marquee scrollamount="12" class="bottomMarquee">JANUARY 2025 - WE ARE BACK ONLINE 🎉</marquee>
 
 
 <script>
