--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
 <body>
 <div class="topButtons">
-  <a href="" class="logo" style="border-bottom-left-radius: 20px;">Home</a>
+  <a href="https://dlldealer.cc" class="logo" style="border-bottom-left-radius: 20px;">Home</a>
   <a href="" class="logo">Downloads</a>
   <div class="logo container" style="background: linear-gradient(to bottom, #f2f6f8 0%,#d8e1e7 50%,#b5c6d0 51%,#e0eff9 100%);">
     <img src="https://dlldealer.cc/ia/logo1.0.png" class="centeredImg" draggable="false"/>
