Add 2 new things

--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
   <p class="headertext" style="display: table-cell; vertical-align: middle;">Welcome</p>
  </div>
 
- <div style="width: 20%; height: 92%; float:left; box-shadow: inset -1px 0px 0px 0px #b5c6d0;">
+ <div style="width: 20%; height: 920px; float:left; box-shadow: inset -1px 0px 0px 0px #b5c6d0;">
   <a href="/inquisitor.html?link=687474-70733A-2F2F77-77772E-796F75-747562-652E63-6F6D2F-776174-63683F-763D4D-596E65-6E5568-443851-67" class="dllist listRed">Cracks</a>
   <a href="" class="dllist listOrange">Film</a>
   <a href="" class="dllist listYellow">Coupons</a>
   <a href="" class="dllist listGreen">Free Games</a>
   <a href="" class="dllist listBlue">Download</a>
-  <a href="" class="dllist listNull">???</a>
+  <a href="" class="dllist listNull">More Soon</a>
 
   <div class="squarePm">
     <a href="" class="pmLink"><p draggable="false" class="pmTxt">Leaf</p></a>
   </div>
   
  </div>
- <div style="width: 80%; height: 92%; float:right;">
+ <div style="width: 80%; height: 920px; float:right;">
   <p class="headertext testimonialHeader">Many satisfaction customers ...</p>
   <div class="testimonial">
     <p class="testimonialName">Leon C.</p>
@@ -94,8 +94,14 @@
     <p class="testimonialName">Miguel D.</p>
       <div class="testimonialRev">
         <img class="testimonialRPic" src="/ia/testimonial_c.png"></img>
-        <div class="testimonialRTxt">"<span><img draggable="false" src="ia/nuggetsShop.png" style="user-select: none;"></span>"</div>
-        <!-- Aren't you forgetting someting? -->
+        <div class="testimonialRTxt">"<span><img draggable="false" src="ia/burgerShop.png" style="user-select: none;"></span>"</div>
+      </div>
+  </div>
+  <div class="testimonial">
+    <p class="testimonialName">Miguel D.</p>
+      <div class="testimonialRev">
+        <img class="testimonialRPic" src="/ia/testimonial_c.png"></img>
+        <div class="testimonialRTxt">"haha stupiud"</div>
       </div>
   </div>
 
