--- a/merrry.html
+++ b/merrry.html
@@ -11,10 +11,78 @@ body {
   margin: 0;
   padding: 0;
 }
+.nav-button {
+  display: block;
+  width: 150px;
+  padding: 12px;
+  margin: 15px auto;
+  background: linear-gradient(to bottom, #FF3333 0%, #CC0000 100%);
+  border: 3px ridge #FFD700;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 14px;
+  cursor: pointer;
+  /* box-shadow: 3px 3px 5px #000000; */
+}
+.nav-button:hover {
+  background: linear-gradient(to bottom, #FF6666 0%, #FF0000 100%);
+  /* box-shadow: 5px 5px 8px #000000; */
+}
+.nav-button:active {
+  background: #FF3333;
+  /* box-shadow: 1px 1px 2px #000000; */
+}
 </style>
 </head>
 <body>
 
+<table width="100%" border="0" cellpadding="0" cellspacing="0">
+<tr>
+<!-- SIDEBAR -->
+<td width="180" valign="top" bgcolor="#006600" style="border-right: 5px solid #FFD700;">
+<center>
+<br>
+<font size="5" color="#FFD700" face="Arial Black"><b>~* MERRY *~</b></font>
+<font size="5" color="#FFD700" face="Arial Black"><b>MENU</b></font>
+<br><br>
+<img src="merry/wreathblink4.gif" width="40" height="56" alt="Wreath">
+<br><br>
+
+<a href="index.html" class="nav-button">HOME</a>
+<a href="guestbook.html" class="nav-button">GUESTBOOK</a>
+<a href="photos.html" class="nav-button">PHOTOS</a>
+<a href="recipes.html" class="nav-button">RECIPES</a>
+<a href="links.html" class="nav-button">COOL LINKS</a>
+
+<br>
+<img src="merry/cane17.gif" width="75" height="118" alt="Candy Cane">
+<br><br>
+<img src="merry/flake.gif" width="63" height="62" alt="Snowflake">
+<br><br>
+
+<font size="2" color="#FFFFFF">
+<b>Visitor #</b><br>
+<table border="2" bordercolor="#FFD700" cellpadding="5" cellspacing="0" bgcolor="#000000">
+<tr>
+<td align="center">
+<font size="4" color="#00FF00" face="Courier New, monospace"><b><span id="visitorCount">000000000</span></b></font>
+</td>
+</tr>
+</table>
+</font>
+
+<br><br>
+<img src="merry/reindeer4.gif" width="65" height="124" alt="3D Reindeer">
+<br><br>
+
+</center>
+</td>
+
+<!-- MAIN CONTENT -->
+<td valign="top">
 <center>    
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 <tr>
@@ -88,7 +156,6 @@ var tracks = [
   { file: "merry/mp3/nowell.mp3", name: "The First Noel" },
   { file: "merry/mp3/rudolph.mp3", name: "Rudolph the Red-Nosed Reindeer" },
   { file: "merry/mp3/silenght.mp3", name: "Silent Night" }
-  
 ];
 
 var currentTrack = 0;
@@ -244,6 +311,43 @@ function toggleRepeat() {
 <br><br>
 
 </center>
+</td>
+</tr>
+</table>
+
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+
+<script type="text/javascript">
+
+const firebaseConfig = {
+  apiKey: "AIzaSyAuAGn6BvGg3L8oft8aocuJKQE6nyWap4E",
+  authDomain: "merrryvisitorcount.firebaseapp.com",
+  databaseURL: "https://merrryvisitorcount-default-rtdb.firebaseio.com",
+  projectId: "merrryvisitorcount",
+  storageBucket: "merrryvisitorcount.firebasestorage.app",
+  messagingSenderId: "1068164305040",
+  appId: "1:1068164305040:web:eb6183d14baca3a1e64815"
+};
+
+// initialize firebase
+firebase.initializeApp(firebaseConfig);
+var database = firebase.database();
+var visitorRef = database.ref('visitors/count');
+
+// increment visitor count
+visitorRef.transaction(function(currentCount) {
+  return (currentCount || 0) + 1;
+}).then(function(result) {
+  var count = result.snapshot.val();
+  var paddedCount = String(count).padStart(9, '0');
+  document.getElementById('visitorCount').innerText = paddedCount;
+}).catch(function(error) {
+  console.error('Error updating visitor count:', error);
+  document.getElementById('visitorCount').innerText = '000000000';
+});
+</script>
 
 </body>
 </html>
